--- a/LogbookApp/LogbookApp.Mocks/LogbookApp.Mocks.csproj
+++ b/LogbookApp/LogbookApp.Mocks/LogbookApp.Mocks.csproj
@@ -104,6 +104,10 @@
       <Project>{5B0AE921-C26D-47DD-8357-508464F036D3}</Project>
       <Name>BaseData</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary.TestMocks\OnlineOfflineSyncLibrary.TestMocks.csproj">
+      <Project>{8B8094EC-38ED-4B57-BF7C-47918D42061F}</Project>
+      <Name>OnlineOfflineSyncLibrary.TestMocks</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary\OnlineOfflineSyncLibrary.csproj">
       <Project>{af8b13e5-162d-453d-a5c5-fd8a54f97dbc}</Project>
       <Name>OnlineOfflineSyncLibrary</Name>
@@ -118,6 +122,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockOnlineFlightData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLocalStorage.cs" />
   </ItemGroup>
