--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAircraft.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAirfields.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsFK.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsFlights.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsUser.cs" />
   </ItemGroup>
