--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -112,6 +112,7 @@
     <Compile Include="FlightDataServiceTestsGetData.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserConnected.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserNotConnected.cs" />
+    <Compile Include="MockFrameworkTests\MockOnLineDataTests.cs" />
     <Compile Include="MockInternetTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAircraft.cs" />
