--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -109,6 +109,7 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightDataManagerTestsSaveFlight.cs" />
     <Compile Include="FlightDataServiceTestsGetData.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserConnected.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserNotConnected.cs" />
