FlightDataManager generics and FlightsFactory

--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -109,10 +109,12 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightDataManagerTestBase.cs" />
     <Compile Include="FlightDataManagerTestsSaveFlight.cs" />
     <Compile Include="FlightDataServiceTestsGetData.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserConnected.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserNotConnected.cs" />
+    <Compile Include="MockFlightSyncManager.cs" />
     <Compile Include="MockFrameworkTests\MockOnLineDataTests.cs" />
     <Compile Include="MockInternetTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -121,6 +123,7 @@
     <Compile Include="SyncManagerTests\SyncManagerTestsFK.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsFlights.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsUser.cs" />
+    <Compile Include="TestDates.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
