--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Capacity.cs" />
     <Compile Include="Flight.cs" />
     <Compile Include="FlightData.cs" />
+    <Compile Include="FlightFactory.cs" />
     <Compile Include="IFlightDataManager.cs" />
     <Compile Include="ILookups.cs" />
     <Compile Include="InMemoryLookups.cs" />
