--- a/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
+++ b/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
@@ -113,6 +113,7 @@
     <Compile Include="DataManager.cs" />
     <Compile Include="DataService.cs" />
     <Compile Include="IDataService.cs" />
+    <Compile Include="IDataUpdateActions.cs" />
     <Compile Include="IOfflineDataService.cs" />
     <Compile Include="IOnlineDataService.cs" />
     <Compile Include="ISyncableData.cs" />
