--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -117,6 +117,7 @@
     <Compile Include="MockFlightSyncManager.cs" />
     <Compile Include="MockFrameworkTests\MockOnLineDataTests.cs" />
     <Compile Include="MockInternetTools.cs" />
+    <Compile Include="MockOffLineFlightData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAircraft.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAirfields.cs" />
