--- a/LogbookApp/LogbookApp.Data.Test/LogbookApp.Data.Test.csproj
+++ b/LogbookApp/LogbookApp.Data.Test/LogbookApp.Data.Test.csproj
@@ -109,6 +109,7 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightDataTests.cs" />
     <Compile Include="FlightFactoryTests.cs" />
     <Compile Include="FlightTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
